# hh_ru_API_SQL

./: .gitignore  README.md  database.ini.sample  main.py  pyproject.toml  requirements.txt
src/: config.py  db_manager.py  utils.py
