[tool.poetry]
name = "hh-ru-api-sql"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
check_untyped_defs = true
exclude = 'venv|tests'

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | \.pytest_cache
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
line_length = 119
multi_line_output = 3

[tool.poetry.dependencies]
python = "^3.12"
types-requests = "^2.32.0.20250328"
types-psycopg2 = "^2.9.21.20250318"


[tool.poetry.group.dev.dependencies]
psycopg2 = "^2.9.10"
requests = "^2.32.3"
psycopg2-binary = "^2.9.10"


[tool.poetry.group.lint.dependencies]
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
